--- a/index.html
+++ b/index.html
@@ -317,9 +317,78 @@
                         <h5>
                             <span class="purple__text">Values</span>
                         </h5>
-                        <h1>We Always Abide by Our <span class="purple__text">Principles.</span></h1>
+                        <h1 class="title">We Always Abide by Our <span class="purple__text">Principles.</span></h1>
                         <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas laudantium repellendus velit impedit in labore nemo, doloribus dolorem laboriosam cupiditate? Provident illum cumque numquam facere tempora temporibus ad, quibusdam itaque.</p>
+                        <div class="offers">
+                            <div class="offer">
+                                <div class="offer__header">
+                                    <div class="offer__icon1">
+                                        <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather dollar-sign"
+                      >
+                        <line x1="12" y1="1" x2="12" y2="23"></line>
+                        <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
+                      </svg>
+                                    </div>
+                                    <h2>Affordable</h2>
+                                </div>
+                                <div class="offer__sub">
+                                    <p class="offer__desc">
+                                        We promise to offer you the best rate we can - at par with the industry standard.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="offer">
+                                <div class="offer__header">
+                                    <div class="offer__icon2">
+                                        <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-briefcase"
+                      >
+                        <rect
+                          x="2"
+                          y="7"
+                          width="20"
+                          height="14"
+                          rx="2"
+                          ry="2"
+                        ></rect>
+                        <path
+                          d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"
+                        ></path>
+                      </svg>
+                                    </div>
+                                    <h2>Professionalism</h2>
+                                </div>
+                                <div class="offer__sub">
+                                    <p class="offer__desc">
+                                        We assure you that our templates are designed and created by professional designers.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn offers__btn">Learn More</button>
                     </div>
+                    <figure class="offers__img--wrapper">
+                        <img class="offers__img" src="./assets_react/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                    </figure>
                 </div>
             </div>
         </div>
