--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
                       </svg>
                                     </div>
-                                    <h2>Affordable</h2>
+                                    <h2 class="offer__name">Affordable</h2>
                                 </div>
                                 <div class="offer__sub">
                                     <p class="offer__desc">
@@ -375,7 +375,7 @@
                         ></path>
                       </svg>
                                     </div>
-                                    <h2>Professionalism</h2>
+                                    <h2 class="offer__name">Professionalism</h2>
                                 </div>
                                 <div class="offer__sub">
                                     <p class="offer__desc">
@@ -389,6 +389,74 @@
                     <figure class="offers__img--wrapper">
                         <img class="offers__img" src="./assets_react/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
                     </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="pricing">
+        <div class="container">
+            <div class="row">
+                <div class="pricing__info">
+                    <h5>
+                        <span class="purple__text">Pricing</span>
+                    </h5>
+                    <h1 class="title">Reasonable & Flexible <span class="purple__text">Plans.</span></h1>
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dignissimos temporibus, cum quas laboriosam vero placeat laborum culpa ex illo.</p>
+            </div>
+            <div class="pricing__plans">
+                <div class="plan">
+                    <div class="personal__top--border"></div>
+                    <div class="personal__top">
+                        <h6>PERSONAL</h6>
+                        <h1 class="prices">$17.99</h1>
+                        <h4 class="rate">MONTHLY</h4>
+                    </div>
+                    <div class="personal__middle">
+                        <h6>For Individuals</h6>
+                        <p class="personal__middle--desc">30 Templates</p>
+                        <p class="personal__middle--desc">7 Landing Pages</p>
+                        <p class="personal__middle--desc">12 Internal Pages</p>
+                        <p class="personal__middle--desc">Basic Assistance</p>
+                    </div>
+                    <div class="personal__bottom">
+                        <button class="personal__button">BUY NOW</button>
+                    </div>
+                </div>
+                <div class="business__plan plan">
+                    <div class="business__top--border"></div>
+                    <div class="business__top">
+                        <h6 class="business__header">BUSINESS</h6>
+                        <h1 class="business__price prices">$37.99</h1>
+                        <h4 class=" business__rate rate">MONTHLY</h4>
+                    </div>
+                    <div class="business__middle">
+                        <h6 class="business__header">For Small Businesses</h6>
+                        <p class="business__middle--desc">60 Templates</p>
+                        <p class="business__middle--desc">15 Landing Pages</p>
+                        <p class="business__middle--desc">22 Internal Pages</p>
+                        <p class="business__middle--desc">Priority Assistance</p>
+                    </div>
+                    <div class="business__bottom">
+                        <button class="business__button">BUY NOW</button>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="enterprise__top--border"></div>
+                    <div class="enterprise__top">
+                        <h6>ENTERPRISE</h6>
+                        <h1 class="prices">$57.99</h1>
+                        <h4 class="rate">MONTHLY</h4>
+                    </div>
+                    <div class="enterprise__middle">
+                        <h6>For Large Companies</h6>
+                        <p class="enterprise__middle--desc">90 Templates</p>
+                        <p class="enterprise__middle--desc">27 Landing Pages</p>
+                        <p class="enterprise__middle--desc">37 Internal Pages</p>
+                        <p class="enterprise__middle--desc">Personal Assistance</p>
+                    </div>
+                    <div class="enterprise__bottom">
+                        <button class="enterprise__button">BUY NOW</button>
+                    </div>
                 </div>
             </div>
         </div>
