--- a/index.html
+++ b/index.html
@@ -480,10 +480,153 @@
                         </h5>
                         <h1 class="title">Our Clients <span class="purple__text">Love Us.</span></h1>
                         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam.</p>
+                        <div class="client__experience">
+                            <div class="font__awesome--stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        <h6>Amazing User Experience</h6>
+                        <p class="comments">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, delectus. Repellat consequuntur, ut praesentium provident porro autem aliquid. Eaque ullam inventore voluptatum enim sint. Quia pariatur voluptate quisquam nostrum ipsam quo eius doloremque, distinctio atque, nisi tenetur sequi, unde illo rem blanditiis dignissimos facere at quae tempora! Temporibus, fugit culpa.</p>
+                        <div class="customer__profile">
+                            <div class="customer__hale">
+                            <figure class="customer__img--wrapper">
+                                <img class="customer__img" src="./assets_react/photo-1494790108377-be9c29b29330.avif" alt="">
+                            </figure>
+                            <div class="customer__info">
+                                <h5 class="customer__info--name">Charlotte Hale</h5>
+                                <p class="customer__info--job">Director, Delos Inc.</p>
+                            </div>
+                        </div>
+                        <div class="arrows">
+                            <button class="arrow">
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
+                                    <path d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                                  </svg>
+                            </button>
+                            <div class="line"></div>
+                            <button class="arrow">
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
+                                    <path d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                                  </svg>
+                            </button>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact">
+                    <svg viewBox="0 0 600 600" class="weird__circle4">
+                        <g transform="translate(300,300)">
+                          <path d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z" fill="currentColor"></path>
+                        </g>
+                      </svg>
+                      <svg viewBox="0 0 600 600" class="weird__circle5">
+                        <g transform="translate(300,300)">
+                          <path d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z" fill="currentColor"></path>
+                        </g>
+                      </svg>
+                      <div class="contact__info">
+                        <h1 class="contact__text">Developers all over the world are happily using Treact.</h1>
+                        <div class="buttons">
+                        <button class="start__btn">Get Started</button>
+                        <button class="contact__btn">Contact Us</button>
+                    </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="footer__top">
+        <footer>
+            <svg viewBox="0 0 600 600" class="weird__circle6">
+                <g transform="translate(300,300)">
+                  <path d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z" fill="currentColor"></path>
+                </g>
+              </svg>
+              <svg viewBox="0 0 600 600" class="weird__circle7">
+                <g transform="translate(300,300)">
+                  <path d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z" fill="currentColor"></path>
+                </g>
+              </svg>
+              <div class="container">
+                <div class="row__wrap">
+                    <div class="row">
+                        <div class="footer__links">
+                            <div class="footer__link--list">
+                            <h5 class="footer__link--names">MAIN</h5>
+                            <a href="#" class="link">Blog</a>
+                            <a href="#" class="link">FAQS</a>
+                            <a href="#" class="link">Support</a>
+                            <a href="#" class="link">Contact Us</a>
+                        </div>
+                            <div class="footer__link--list">
+                            <h5 class="footer__link--names">PRODUCT</h5>
+                            <a href="#" class="link">Log In</a>
+                            <a href="#" class="link">Personal</a>
+                            <a href="#" class="link">Business</a>
+                            <a href="#" class="link">Team</a>
+                        </div>
+                            <div class="footer__link--list">
+                            <h5 class="footer__link--names">PRESS</h5>
+                            <a href="#" class="link">Logos</a>
+                            <a href="#" class="link">Events</a>
+                            <a href="#" class="link">Stories</a>
+                            <a href="#" class="link">Office</a>
+                        </div>
+                            <div class="footer__link--list">
+                            <h5 class="footer__link--names">TEAM</h5>
+                            <a href="#" class="link">Career</a>
+                            <a href="#" class="link">Founders</a>
+                            <a href="#" class="link">Culture</a>
+                            <a href="#" class="link">Onboarding</a>
+                        </div>
+                            <div class="footer__link--list">
+                            <h5 class="footer__link--names">LEGAL</h5>
+                            <a href="#" class="link">GDPR</a>
+                            <a href="#" class="link">Privacy Policy</a>
+                            <a href="#" class="link">Terms of Service</a>
+                            <a href="#" class="link">Disclaimer</a>
+                        </div>
+                        </div>
+                        <div class="break__line"></div>
+                        <div class="footer__close">
+                            <div class="logo">
+                                <img class="footer__logo" src="./assets_react/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                                <div class="footer__logo--name">
+                                    T-React Inc.
+                                </div>
+                            </div>
+                            <p class="copyright">© 2018 Treact Inc. All Rights Reserved.</p>
+                            <div class="socials">
+                                <a class="social" href="facebook.com">
+                                    <svg fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z"></path>
+                                      </svg>
+                                </a>
+                                <a class="social" href="twitter.com">
+                                    <svg fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M22.162 5.656a8.384 8.384 0 01-2.402.658A4.196 4.196 0 0021.6 4c-.82.488-1.719.83-2.656 1.015a4.182 4.182 0 00-7.126 3.814 11.874 11.874 0 01-8.62-4.37 4.168 4.168 0 00-.566 2.103c0 1.45.738 2.731 1.86 3.481a4.168 4.168 0 01-1.894-.523v.052a4.185 4.185 0 003.355 4.101 4.21 4.21 0 01-1.89.072A4.185 4.185 0 007.97 16.65a8.394 8.394 0 01-6.191 1.732 11.83 11.83 0 006.41 1.88c7.693 0 11.9-6.373 11.9-11.9 0-.18-.005-.362-.013-.54a8.496 8.496 0 002.087-2.165z"></path>
+                                      </svg>
+                                </a>
+                                <a class="social" href="youtube.com">
+                                    <svg fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M21.543 6.498C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5l6-3.5-6-3.5v7z"></path>
+                                      </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+        </footer>
+    </div>
   </body>
 </html>
