--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <a class="logo__name" href="#">Treact</a>
           </div>
           <ul class="nav__links">
-            <li><a class="nav__link" href="#">About</a></li>
-            <li><a class="nav__link" href="#">Blog</a></li>
-            <li><a class="nav__link" href="#">Pricing</a></li>
-            <li><a class="nav__link" href="#">Contact Us</a></li>
-            <li><a class="nav__link--login" href="#">Login</a></li>
+            <li><a class="nav__link link__hover--effect" href="#">About</a></li>
+            <li><a class="nav__link link__hover--effect" href="#">Blog</a></li>
+            <li><a class="nav__link link__hover--effect" href="#">Pricing</a></li>
+            <li><a class="nav__link link__hover--effect" href="#">Contact Us</a></li>
+            <li><a class="nav__link--login link__hover--effect" href="#">Login</a></li>
             <a class="nav__link btn" href=""> Sign up </a>
           </ul>
         </div>
