--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a class="nav__link link__hover--effect" href="#">Pricing</a></li>
             <li><a class="nav__link link__hover--effect" href="#">Contact Us</a></li>
             <li><a class="nav__link--login link__hover--effect" href="#">Login</a></li>
-            <a class="nav__link btn" href=""> Sign up </a>
+            <li><a class="nav__link btn" href=""> Sign up </a></li>
           </ul>
         </div>
       </div>
