--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <section id="landing">
@@ -31,6 +32,48 @@
             <li><a class="nav__link--login link__hover--effect" href="#">Login</a></li>
             <li><a class="nav__link btn" href=""> Sign up </a></li>
           </ul>
+          <button class="btn__menu" onclick="openMenu()">
+            <i class="fas fa-bars" aria-hidden="true"></i>
+          </button>
+
+          <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+              <i class="fas fa-times" aria-hidden="true"></i>
+            </button>
+
+            <ul class="menu__links">
+
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">About</a>
+              </li>
+
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Blog</a>
+              </li>
+
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Pricing</a>
+              </li>
+
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()"
+                  >Contact Us</a>
+              </li>
+
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Login</a>
+              </li>
+
+              <li class="menu__list">
+                <a
+                  href="#"
+                  class="nav__link--primary"
+                  onclick="closeMenu()"
+                  >Sign Up</a>
+              </li>
+
+            </div>
+            </ul>
         </div>
       </div>
     </section>
@@ -562,38 +605,38 @@
                         <div class="footer__links">
                             <div class="footer__link--list">
                             <h5 class="footer__link--names">MAIN</h5>
-                            <a href="#" class="link">Blog</a>
-                            <a href="#" class="link">FAQS</a>
-                            <a href="#" class="link">Support</a>
-                            <a href="#" class="link">Contact Us</a>
+                            <a href="#" class="link footer__link-hover--effect">Blog</a>
+                            <a href="#" class="link footer__link-hover--effect">FAQS</a>
+                            <a href="#" class="link footer__link-hover--effect">Support</a>
+                            <a href="#" class="link footer__link-hover--effect">Contact Us</a>
                         </div>
                             <div class="footer__link--list">
                             <h5 class="footer__link--names">PRODUCT</h5>
-                            <a href="#" class="link">Log In</a>
-                            <a href="#" class="link">Personal</a>
-                            <a href="#" class="link">Business</a>
-                            <a href="#" class="link">Team</a>
+                            <a href="#" class="link footer__link-hover--effect">Log In</a>
+                            <a href="#" class="link footer__link-hover--effect">Personal</a>
+                            <a href="#" class="link footer__link-hover--effect">Business</a>
+                            <a href="#" class="link footer__link-hover--effect">Team</a>
                         </div>
                             <div class="footer__link--list">
                             <h5 class="footer__link--names">PRESS</h5>
-                            <a href="#" class="link">Logos</a>
-                            <a href="#" class="link">Events</a>
-                            <a href="#" class="link">Stories</a>
-                            <a href="#" class="link">Office</a>
+                            <a href="#" class="link footer__link-hover--effect">Logos</a>
+                            <a href="#" class="link footer__link-hover--effect">Events</a>
+                            <a href="#" class="link footer__link-hover--effect">Stories</a>
+                            <a href="#" class="link footer__link-hover--effect">Office</a>
                         </div>
                             <div class="footer__link--list">
                             <h5 class="footer__link--names">TEAM</h5>
-                            <a href="#" class="link">Career</a>
-                            <a href="#" class="link">Founders</a>
-                            <a href="#" class="link">Culture</a>
-                            <a href="#" class="link">Onboarding</a>
+                            <a href="#" class="link footer__link-hover--effect">Career</a>
+                            <a href="#" class="link footer__link-hover--effect">Founders</a>
+                            <a href="#" class="link footer__link-hover--effect">Culture</a>
+                            <a href="#" class="link footer__link-hover--effect">Onboarding</a>
                         </div>
                             <div class="footer__link--list">
                             <h5 class="footer__link--names">LEGAL</h5>
-                            <a href="#" class="link">GDPR</a>
-                            <a href="#" class="link">Privacy Policy</a>
-                            <a href="#" class="link">Terms of Service</a>
-                            <a href="#" class="link">Disclaimer</a>
+                            <a href="#" class="link footer__link-hover--effect">GDPR</a>
+                            <a href="#" class="link footer__link-hover--effect">Privacy Policy</a>
+                            <a href="#" class="link footer__link-hover--effect">Terms of Service</a>
+                            <a href="#" class="link footer__link-hover--effect">Disclaimer</a>
                         </div>
                         </div>
                         <div class="break__line"></div>
