Signup button fix

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a class="nav__link link__hover--effect" href="#">Pricing</a></li>
             <li><a class="nav__link link__hover--effect" href="#">Contact Us</a></li>
             <li><a class="nav__link--login link__hover--effect" href="#">Login</a></li>
-            <li><a class="nav__link btn" href=""> Sign up </a></li>
+            <li><a class="nav__link--btn btn" href=""> Sign up </a></li>
           </ul>
           <button class="btn__menu" onclick="openMenu()">
             <i class="fas fa-bars" aria-hidden="true"></i>
