--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="logo">
             <img
               class="logo__pic"
-              src="./assets_react/logo.2c489fc453a1783cbadacf914efa3df6.svg"
+              src="./assets_react/logo.2.svg"
               alt=""
             />
             <a class="logo__name" href="#">Treact</a>
@@ -116,7 +116,7 @@
               <figure class="header__customers">
                 <img
                   class="header__customers--wrapper"
-                  src="./assets_react/customers-logo-strip.680ac7c2e8ae28161d2c.png"
+                  src="./assets_react/customers-logo-strip.png"
                   alt=""
                 />
               </figure>
@@ -124,7 +124,7 @@
             <figure class="header__img">
               <img
                 class="header__img--wrapper"
-                src="./assets_react/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg"
+                src="./assets_react/design-illustration-2.svg"
                 alt=""
               />
             </figure>
@@ -166,7 +166,7 @@
           <div class="service">
             <div class="service__icon">
               <img
-                src="./assets_react/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg"
+                src="./assets_react/shield-icon.svg"
                 alt=""
               />
             </div>
@@ -181,7 +181,7 @@
           <div class="service">
             <div class="service__icon">
               <img
-                src="./assets_react/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg"
+                src="./assets_react/support-icon.svg"
                 alt=""
               />
             </div>
@@ -196,7 +196,7 @@
           <div class="service">
             <div class="service__icon">
               <img
-                src="./assets_react/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg"
+                src="./assets_react/customize-icon.svg"
                 alt=""
               />
             </div>
@@ -211,7 +211,7 @@
           <div class="service">
             <div class="service__icon">
               <img
-                src="./assets_react/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg"
+                src="./assets_react/reliable-icon.svg"
                 alt=""
               />
             </div>
@@ -226,7 +226,7 @@
           <div class="service">
             <div class="service__icon">
               <img
-                src="./assets_react/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg"
+                src="./assets_react/fast-icon.svg"
                 alt=""
               />
             </div>
@@ -241,7 +241,7 @@
           <div class="service">
             <div class="service__icon">
               <img
-                src="./assets_react/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg"
+                src="./assets_react/simple-icon.svg"
                 alt=""
               />
             </div>
@@ -279,7 +279,7 @@
             <figure class="quality__img--wrap">
               <img
                 class="quality__img"
-                src="./assets_react/hero-screenshot-1.40a097b525c2f8c9808e.png"
+                src="./assets_react/hero-screenshot-1.png"
                 alt=""
               />
               <svg viewBox="0 0 1280 1280" class="dots">
@@ -299,7 +299,7 @@
               <figure class="steps__img--wrap">
                 <img
                   class="steps__img"
-                  src="./assets_react/laptop-screenshot-2.241aac1fbc66db29d873.png"
+                  src="./assets_react/laptop-screenshot.png"
                   alt=""
                 />
                 <svg viewBox="0 0 1280 1280" class="dots__part2">
@@ -430,7 +430,7 @@
                         <button class="btn offers__btn">Learn More</button>
                     </div>
                     <figure class="offers__img--wrapper">
-                        <img class="offers__img" src="./assets_react/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                        <img class="offers__img" src="./assets_react/prototype-illustration.svg" alt="">
                     </figure>
                 </div>
             </div>
@@ -515,7 +515,7 @@
             <div class="row">
                 <div class="flex__row">
                     <figure class="test__img--figure">
-                        <img class="testimonials__img" src="./assets_react/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
+                        <img class="testimonials__img" src="./assets_react/love-illustration.svg" alt="">
                     </figure>
                     <div class="testimonials__info">
                         <h5>
@@ -536,7 +536,7 @@
                         <div class="customer__profile">
                             <div class="customer__hale">
                             <figure class="customer__img--wrapper">
-                                <img class="customer__img" src="./assets_react/photo-1494790108377-be9c29b29330.avif" alt="">
+                                <img class="customer__img" src="./assets_react/photo.avif" alt="">
                             </figure>
                             <div class="customer__info">
                                 <h5 class="customer__info--name">Charlotte Hale</h5>
@@ -642,7 +642,7 @@
                         <div class="break__line"></div>
                         <div class="footer__close">
                             <div class="logo">
-                                <img class="footer__logo" src="./assets_react/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                                <img class="footer__logo" src="./assets_react/logo-light.svg" alt="">
                                 <div class="footer__logo--name">
                                     T-React Inc.
                                 </div>
